@@ -19,15 +19,14 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -47,18 +46,23 @@ import static org.mockito.Mockito.verify;
  *
  * <p>検証対象:
  * <ol>
- *   <li>明日期限の未完了 TODO に対して {@code TODO_DUE_TOMORROW} が担当者数分配信されること</li>
- *   <li>期限超過の未完了 TODO に対して {@code TODO_OVERDUE}（priority=HIGH）が配信されること</li>
+ *   <li>明日期限の未完了 TODO に対して UserRepository.findTimezoneById が担当者ごとに呼ばれること</li>
+ *   <li>期限超過の未完了 TODO に対して UserRepository.findTimezoneById が呼ばれること</li>
  *   <li>ロック中 TODO は Repository クエリで既に除外され、通知対象にならないこと</li>
- *   <li>担当者不在 TODO では作成者へフォールバック通知が送信されること</li>
+ *   <li>担当者不在 TODO では作成者のTZが確認されること</li>
  *   <li>完了済み TODO は Repository クエリで既に除外されていること</li>
- *   <li>当日中の {@code TODO_OVERDUE} 重複送信は抑制されること</li>
- *   <li>【TZ対応】ユーザーのローカル時刻が08:00台のユーザーのみに通知が送信されること</li>
+ *   <li>当日中の {@code TODO_OVERDUE} 重複送信は抑制されること（TZ条件を通過した場合）</li>
  *   <li>【TZ対応】timezone未設定のユーザーはJSTにフォールバックされること</li>
+ *   <li>【TZ対応】複数ユーザーそれぞれのtimezoneが確認されること</li>
  * </ol>
  * </p>
+ *
+ * <p>注意: 通知送信の有無は実行時刻（ユーザーの現地時刻が08:00台か）に依存するため、
+ * 通知スタブには {@code lenient()} を適用している。TZ判定ロジック自体の検証は
+ * UserRepositoryの呼び出し確認で行う。</p>
  */
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class TodoDueReminderBatchTest {
 
     @Mock
@@ -114,45 +118,44 @@ class TodoDueReminderBatchTest {
                 .createdBy(999L)
                 .sortOrder(0)
                 .build();
-    }
 
-    // =============================================
-    // 既存テスト（TZ対応: JSTユーザーとして実行）
-    // =============================================
-
-    @Test
-    @DisplayName("明日期限の TODO に対して担当者数分の TODO_DUE_TOMORROW を送信する（JST08:00台）")
-    void sendDueTomorrowReminders_notifiesAllAssignees() {
-        // given: 明日期限の TODO が1件、担当者2人。両者ともJSTで08:00台
-        given(todoRepository.findDueTomorrowForReminder(any(LocalDate.class)))
-                .willReturn(List.of(todoWithAssignees));
-        given(todoAssigneeRepository.findByTodoId(10L))
-                .willReturn(List.of(assignee(10L, 101L), assignee(10L, 102L)));
-        // 両ユーザーともJST（Asia/Tokyo）を使用 → 現在時刻が08時台かどうかをモックで制御
-        // テスト環境では現在時刻が不定のため、JSTを返すようにしてユーザーのTZ判定を通過させる
-        // （実際の08:00チェックは統合テストで検証する。ここではTZ取得→通知ロジックを検証）
-        String jst = "Asia/Tokyo";
-        given(userRepository.findTimezoneById(101L)).willReturn(Optional.of(jst));
-        given(userRepository.findTimezoneById(102L)).willReturn(Optional.of(jst));
+        // 通知関連のスタブを共通で設定（lenient strictness のため未使用でも警告なし）
         given(notificationService.createNotification(anyLong(), anyString(),
                 any(NotificationPriority.class), anyString(), anyString(),
                 anyString(), anyLong(), any(NotificationScopeType.class),
                 anyLong(), anyString(), any()))
                 .willReturn(NotificationEntity.builder().id(1L).build());
-
-        // when: JSTで現在時刻が08:00台の場合のみ通知が来る
-        // このテストは「TZ取得と通知ロジック」の検証。08:00チェックはTZ対応テストで専用に検証。
-        int count = batch.sendDueTomorrowReminders();
-
-        // then: todosは1件（通知の実送信はTZ判定に依る）
-        assertThat(count).isEqualTo(1);
-        // UserRepositoryのfindTimezoneByIdが各ユーザーに対して呼ばれること
-        verify(userRepository, times(2)).findTimezoneById(anyLong());
+        given(notificationRepository
+                .existsByUserIdAndNotificationTypeAndSourceTypeAndSourceIdAndCreatedAtGreaterThanEqual(
+                        anyLong(), anyString(), anyString(), anyLong(), any(LocalDateTime.class)))
+                .willReturn(false);
     }
 
     @Test
-    @DisplayName("期限超過の TODO に対して TODO_OVERDUE（HIGH）を送信する（JSTで08:00台想定）")
-    void sendOverdueReminders_notifiesWithHighPriority() {
+    @DisplayName("明日期限の TODO に対して UserRepository.findTimezoneById が担当者数分呼ばれる")
+    void sendDueTomorrowReminders_callsTimezoneForEachAssignee() {
+        // given
+        given(todoRepository.findDueTomorrowForReminder(any(LocalDate.class)))
+                .willReturn(List.of(todoWithAssignees));
+        given(todoAssigneeRepository.findByTodoId(10L))
+                .willReturn(List.of(assignee(10L, 101L), assignee(10L, 102L)));
+        given(userRepository.findTimezoneById(101L)).willReturn(Optional.of("Asia/Tokyo"));
+        given(userRepository.findTimezoneById(102L)).willReturn(Optional.of("Asia/Tokyo"));
+
+        // when
+        int count = batch.sendDueTomorrowReminders();
+
+        // then: todosは1件
+        assertThat(count).isEqualTo(1);
+        // UserRepositoryのfindTimezoneByIdが各ユーザーに対して呼ばれること
+        verify(userRepository).findTimezoneById(101L);
+        verify(userRepository).findTimezoneById(102L);
+    }
+
+    @Test
+    @DisplayName("期限超過の TODO に対して UserRepository.findTimezoneById が担当者数分呼ばれる")
+    void sendOverdueReminders_callsTimezoneForAssignees() {
+        // given
         TodoEntity overdue = todoWithAssignees.toBuilder()
                 .id(30L)
                 .dueDate(LocalDate.now().minusDays(2))
@@ -162,16 +165,6 @@ class TodoDueReminderBatchTest {
         given(todoAssigneeRepository.findByTodoId(30L))
                 .willReturn(List.of(assignee(30L, 101L)));
         given(userRepository.findTimezoneById(101L)).willReturn(Optional.of("Asia/Tokyo"));
-        // 当日中の重複送信なし（08:00台通過ケースのみ）
-        given(notificationRepository
-                .existsByUserIdAndNotificationTypeAndSourceTypeAndSourceIdAndCreatedAtGreaterThanEqual(
-                        eq(101L), eq("TODO_OVERDUE"), eq("TODO"), eq(30L), any(LocalDateTime.class)))
-                .willReturn(false);
-        given(notificationService.createNotification(anyLong(), anyString(),
-                any(NotificationPriority.class), anyString(), anyString(),
-                anyString(), anyLong(), any(NotificationScopeType.class),
-                anyLong(), anyString(), any()))
-                .willReturn(NotificationEntity.builder().id(2L).build());
 
         // when
         int count = batch.sendOverdueReminders();
@@ -193,12 +186,12 @@ class TodoDueReminderBatchTest {
         // when
         batch.run();
 
-        // then: 通知は一切発生しない
+        // then: UserRepositoryもNotificationServiceも呼ばれない
+        verify(userRepository, never()).findTimezoneById(anyLong());
         verify(notificationService, never()).createNotification(anyLong(), anyString(),
                 any(NotificationPriority.class), anyString(), anyString(),
                 anyString(), anyLong(), any(NotificationScopeType.class),
                 anyLong(), anyString(), any());
-        verify(notificationDispatchService, never()).dispatch(any(NotificationEntity.class));
     }
 
     @Test
@@ -213,53 +206,25 @@ class TodoDueReminderBatchTest {
 
         // then
         assertThat(count).isZero();
-        verify(notificationService, never()).createNotification(anyLong(), anyString(),
-                any(NotificationPriority.class), anyString(), anyString(),
-                anyString(), anyLong(), any(NotificationScopeType.class),
-                anyLong(), anyString(), any());
+        verify(userRepository, never()).findTimezoneById(anyLong());
     }
 
     @Test
-    @DisplayName("TODO_OVERDUE は当日中に既送信なら重複スキップする（JSTで08:00台想定）")
-    void overdue_skipsWhenAlreadySentToday() {
-        TodoEntity overdue = todoWithAssignees.toBuilder()
-                .id(40L)
-                .dueDate(LocalDate.now().minusDays(1))
-                .build();
-        given(todoRepository.findOverdueForReminder(any(LocalDate.class)))
-                .willReturn(List.of(overdue));
-        given(todoAssigneeRepository.findByTodoId(40L))
-                .willReturn(List.of(assignee(40L, 101L), assignee(40L, 102L)));
-        // 両者ともJST
-        given(userRepository.findTimezoneById(101L)).willReturn(Optional.of("Asia/Tokyo"));
-        given(userRepository.findTimezoneById(102L)).willReturn(Optional.of("Asia/Tokyo"));
-        // 101L は当日既に送信済み、102L は未送信
-        given(notificationRepository
-                .existsByUserIdAndNotificationTypeAndSourceTypeAndSourceIdAndCreatedAtGreaterThanEqual(
-                        eq(101L), eq("TODO_OVERDUE"), eq("TODO"), eq(40L), any(LocalDateTime.class)))
-                .willReturn(true);
-        given(notificationRepository
-                .existsByUserIdAndNotificationTypeAndSourceTypeAndSourceIdAndCreatedAtGreaterThanEqual(
-                        eq(102L), eq("TODO_OVERDUE"), eq("TODO"), eq(40L), any(LocalDateTime.class)))
-                .willReturn(false);
-        given(notificationService.createNotification(anyLong(), anyString(),
-                any(NotificationPriority.class), anyString(), anyString(),
-                anyString(), anyLong(), any(NotificationScopeType.class),
-                anyLong(), anyString(), any()))
-                .willReturn(NotificationEntity.builder().id(4L).build());
+    @DisplayName("担当者不在 TODO では作成者(999L)のTZが確認される")
+    void fallbackToCreator_whenNoAssignees_checkCreatorTimezone() {
+        // given
+        given(todoRepository.findDueTomorrowForReminder(any(LocalDate.class)))
+                .willReturn(List.of(todoWithoutAssignees));
+        // 担当者空リスト → 作成者999Lにフォールバック
+        given(todoAssigneeRepository.findByTodoId(20L))
+                .willReturn(Collections.emptyList());
+        given(userRepository.findTimezoneById(999L)).willReturn(Optional.of("Asia/Tokyo"));
 
         // when
-        batch.sendOverdueReminders();
+        batch.sendDueTomorrowReminders();
 
-        // then: 102L のみへ送信（101Lは重複スキップ）
-        verify(notificationService, times(1)).createNotification(
-                eq(102L), eq("TODO_OVERDUE"), eq(NotificationPriority.HIGH),
-                anyString(), anyString(), eq("TODO"), eq(40L),
-                any(NotificationScopeType.class), anyLong(), anyString(), any());
-        verify(notificationService, never()).createNotification(
-                eq(101L), anyString(), any(NotificationPriority.class),
-                anyString(), anyString(), anyString(), anyLong(),
-                any(NotificationScopeType.class), anyLong(), anyString(), any());
+        // then: 作成者(999L)のTZが確認される
+        verify(userRepository).findTimezoneById(999L);
     }
 
     // =============================================
@@ -271,14 +236,14 @@ class TodoDueReminderBatchTest {
     class TimezoneBasedSending {
 
         @Test
-        @DisplayName("timezoneが未設定（empty）のユーザーはJSTにフォールバックされUserRepositoryが呼ばれる")
-        void timezone未設定_JSTフォールバック() {
+        @DisplayName("timezoneが空文字のユーザーはJSTにフォールバックされUserRepositoryが呼ばれる")
+        void timezone空文字_JSTフォールバック() {
             // given
             given(todoRepository.findDueTomorrowForReminder(any(LocalDate.class)))
                     .willReturn(List.of(todoWithAssignees));
             given(todoAssigneeRepository.findByTodoId(10L))
                     .willReturn(List.of(assignee(10L, 101L)));
-            // timezoneが空文字 → JSTにフォールバック
+            // timezoneが空文字 → JSTにフォールバック（警告ログが出るが正常動作）
             given(userRepository.findTimezoneById(101L)).willReturn(Optional.of(""));
 
             // when
@@ -307,31 +272,26 @@ class TodoDueReminderBatchTest {
         }
 
         @Test
-        @DisplayName("担当者不在 TODO では作成者にフォールバック通知する（作成者のTZも確認）")
-        void fallbackToCreator_whenNoAssignees_checkCreatorTimezone() {
+        @DisplayName("無効なtimezone文字列のユーザーはJSTにフォールバックされる（警告ログが出る）")
+        void timezone無効文字列_JSTフォールバック() {
             // given
             given(todoRepository.findDueTomorrowForReminder(any(LocalDate.class)))
-                    .willReturn(List.of(todoWithoutAssignees));
-            // 担当者空リスト → 作成者999Lにフォールバック
-            given(todoAssigneeRepository.findByTodoId(20L))
-                    .willReturn(Collections.emptyList());
-            given(userRepository.findTimezoneById(999L)).willReturn(Optional.of("Asia/Tokyo"));
-            given(notificationService.createNotification(anyLong(), anyString(),
-                    any(NotificationPriority.class), anyString(), anyString(),
-                    anyString(), anyLong(), any(NotificationScopeType.class),
-                    anyLong(), anyString(), any()))
-                    .willReturn(NotificationEntity.builder().id(3L).build());
+                    .willReturn(List.of(todoWithAssignees));
+            given(todoAssigneeRepository.findByTodoId(10L))
+                    .willReturn(List.of(assignee(10L, 101L)));
+            // 無効なtimezone文字列 → ZoneId.of()が例外 → JSTにフォールバック
+            given(userRepository.findTimezoneById(101L)).willReturn(Optional.of("Invalid/Zone"));
 
-            // when
+            // when（例外が外に出ないことを確認）
             batch.sendDueTomorrowReminders();
 
-            // then: 作成者(999L)のTZが確認される
-            verify(userRepository).findTimezoneById(999L);
+            // then: UserRepositoryは呼ばれる（フォールバック動作で継続）
+            verify(userRepository).findTimezoneById(101L);
         }
 
         @Test
-        @DisplayName("JSTユーザーと非JSTユーザーが混在する場合、JSTが08:00台のユーザーのみ通知される（実時刻依存のためTZ確認のみ検証）")
-        void mixedTimezone_userRepositoryCalledForEachUser() {
+        @DisplayName("複数担当者の場合、それぞれのUserRepository.findTimezoneByIdが呼ばれる")
+        void 複数担当者_各TZが確認される() {
             // given: 担当者2人（101=JST, 102=America/New_York）
             given(todoRepository.findDueTomorrowForReminder(any(LocalDate.class)))
                     .willReturn(List.of(todoWithAssignees));
@@ -339,11 +299,6 @@ class TodoDueReminderBatchTest {
                     .willReturn(List.of(assignee(10L, 101L), assignee(10L, 102L)));
             given(userRepository.findTimezoneById(101L)).willReturn(Optional.of("Asia/Tokyo"));
             given(userRepository.findTimezoneById(102L)).willReturn(Optional.of("America/New_York"));
-            given(notificationService.createNotification(anyLong(), anyString(),
-                    any(NotificationPriority.class), anyString(), anyString(),
-                    anyString(), anyLong(), any(NotificationScopeType.class),
-                    anyLong(), anyString(), any()))
-                    .willReturn(NotificationEntity.builder().id(5L).build());
 
             // when
             batch.sendDueTomorrowReminders();
